src/test/deca/context/invalid/SansObjet/DeclVar-stringBool.deca
// Description:
//    Declaration of a int variable using == operation between a string variable and int .
//
// Results:
//     Incompatible type asignement error
//
// Historique:
//    cree le 11/01/2022

{
    string x =  "Everyone";
    int y = 17;
    string z = 5 == 17;
}
